@@ -10,19 +10,20 @@ Build-Depends: cdbs,
                intltool,
                libgjs-dev (>= 0.7.6),
                gvfs-backends,
-               gobject-introspection (>= 0.6.15~git20100713),
-               gir1.0-clutter-1.0,
-               gir1.0-freedesktop,
-               gir1.0-glib-2.0 (>= 0.6.15~git20100713),
+               gobject-introspection (>= 0.9),
+               gir1.0-atk-1.0 (>= 1.32),
+               gir1.0-clutter-1.0 (>= 1.4),
+               gir1.0-freedesktop (>= 0.9),
+               gir1.0-glib-2.0 (>= 0.9),
                gir1.0-gtk-3.0,
                gir1.0-json-glib-1.0,
-               gir1.0-mutter-2.31 (>= 2.31.2-3),
+               gir1.0-mutter-2.91,
                gir-repository-dev,
                mutter (>= 2.31.5),
                libcroco3-dev (>= 0.6),
                libdbus-glib-1-dev,
                libgconf2-dev,
-               libgirepository1.0-dev (>= 0.6.5),
+               libgirepository1.0-dev (>= 0.9),
                libglib2.0-dev,
                libglib2.0-bin (>= 2.25.11),
                libgnome-desktop-3-dev (>= 2.90.0),
@@ -46,7 +47,7 @@ Architecture: any
 Depends: ${gir:Depends},
          gir1.0-mutter-2.31,
          gir1.0-gconf-2.0 (>= 2.31.5),
-         gir1.0-glib-2.0 (>= 0.6.15~git20100713),
+         gir1.0-glib-2.0 (>= 0.9),
          gjs,
          ${shlibs:Depends},
          ${misc:Depends},
